Length Modifier "apply" ignores influence #91421

Closed
opened 2021-09-14 23:33:25 +02:00 by Sophie Jantak · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.55

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-12 09:51, hash: b5a1c194c5

Short description of error
When applying the length modifier, any influence settings are ignored and the length is applied to the whole grease pencil object.
Does this whether I have the modifier influencing specific layer(s), material(s), or a pass index.

Exact steps for others to reproduce the error

Open attached .blend file
Apply modifier (the influence is set to layer 1 but both layers will get the added length)

lengthmodifier.blend

Thank you!

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 960M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.55 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-12 09:51, hash: `b5a1c194c5` **Short description of error** When applying the length modifier, any influence settings are ignored and the length is applied to the whole grease pencil object. Does this whether I have the modifier influencing specific layer(s), material(s), or a pass index. **Exact steps for others to reproduce the error** Open attached .blend file Apply modifier (the influence is set to layer 1 but both layers will get the added length) [lengthmodifier.blend](https://archive.blender.org/developer/F10416679/lengthmodifier.blend) Thank you!
Author

Added subscriber: @sophiejay

Added subscriber: @sophiejay
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Added subscriber: @antoniov

Added subscriber: @antoniov

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

The check is missing in Bake.

The fix is just call deformStroke inside bake loop:

image.png

The check is missing in Bake. The fix is just call `deformStroke` inside bake loop: ![image.png](https://archive.blender.org/developer/F10418889/image.png)

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'
YimingWu self-assigned this 2021-09-15 10:09:33 +02:00

This issue was referenced by c420399f4d

This issue was referenced by c420399f4da8f1190dd75751845dd78e100c7e2e
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91421
No description provided.