Fix T91421: Length modifier bake influence check.

Reviewed By: Antonio Vazquez (antoniov)

Differential Revision: https://developer.blender.org/D12496